2003-01-14  Jim Meyering  <jim@meyering.net>

	* same.c (same_name): Tweak a comment.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* same.c (same_name): Reorder tests so as to avoid calling stat()
	when a string comparison is sufficient.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* readtokens.c (readtoken): Cast character to 'unsigned char', not
	'unsigned int'.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* hash-pjw.c: Add comment about low quality of this function.

2003-01-12  Paul Eggert  <eggert@twinsun.com>

	Finish renaming getstr -> getdelim2 and readline -> readlinebuffer,
	to avoid collisions with libcurses and libreadline.

	* Makefile.am (libfetish_a_SOURCES): Remove getstr.c, getstr.h.
	* getstr.h, getstr.c: Remove.
	* getline.c: Include "getline.h", to check interface.
	Move body of old getstr.c here: this defines MIN_CHUNK and
	declares getdelim2, which is renamed from getstr.
	(getline, getdelim): Adjust to renaming of getstr -> getdelim2.

	* linebuffer.c (readlinebuffer): Renamed from readline.
	All uses changed.
	* linebuffer.h: Likewise.
	(readline): Remove backward-compatibility macro.

2003-01-12  Jim Meyering  <jim@meyering.net>

	* makepath.c: Don't test HAVE_ERRNO_H.  It's not necessary.

2003-01-10  Bruno Haible  <bruno@clisp.org>

	* alloca_.h: New file.
	* getdate.y: Unconditionally include alloca.h.
	* makepath.c: Likewise.
	* setenv.c: Likewise.
	* userspec.c: Likewise.

2003-01-09  Bruno Haible  <bruno@clisp.org>

	* stdbool.h.in: New file.

2003-01-08  Bruno Haible  <bruno@clisp.org>

	* safe-read.c: Include specification header first, to ensure its
	selfcontainedness.
	* full-write.c: Likewise.

2003-01-08  Jim Meyering  <jim@meyering.net>

	* full-write.c: Undefine and define-away `const' after inclusion
	of errno.h, not before.  Suggestion from Bruno Haible.

2003-01-07  Jim Meyering  <jim@meyering.net>

	* full-write.c: Rework so that it may serve to define full_read, too.